assets/css/sidebar.css
/*
 * Sidebar
 */

.sidebar {
  position: fixed;
  top: 63px;
  bottom: 0;
  left: 0;
  z-index: 1005;
  padding: 10px;
  padding-top: 25px;
  overflow-x: hidden;
  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
  background-color: #aaa;
  box-shadow: -15px 0px 20px 10px #000;
}

.sidebar-toggle {
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: 30px;
}

.sidebar .nav-item {
  width: 100%;
  padding-left: 10px;
  padding-right: 20px;
}

.sidebar .nav-link {
  border-radius: 0;
}

a:link {
    text-decoration: none;
}

.navbar-nav li a {
  color: #eee;
}

.sidebar .navbar-nav li a {
  color: #333;
}

/* Sick animations */
.rotate{
    -moz-transition: all 400ms;
    -webkit-transition: all 400ms;
    transition: all 400ms;
}

.rotate.down{
    -ms-transform:rotate(90deg);
    -moz-transform:rotate(90deg);
    -webkit-transform:rotate(90deg);
    transform:rotate(90deg);
}

